Updated README with application properties configuration and removed sensitive data